k8s_objects/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: healthchecker-svc
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  selector:
    app: healthchecker-app
  type: ClusterIP
